--- a/高数/第一章-函数与极限/1.1.md
+++ b/高数/第一章-函数与极限/1.1.md
@@ -4,3 +4,16 @@
 
 ### 1.映射概念
 
+定义：  
+设 $X 、 Y$ 是两个非空集合, 如果存在一个法则 $f$, 使得对 $X$ 中每个元素 $x$, 按法则 $f$, 在 $Y$ 中有唯一确定的元素 $y$ 与之对应, 那么称 $f$ 为从 $X$ 到 $Y$ 的映射, 记作
+$$
+f: X \rightarrow Y,
+$$
+其中 $y$ 称为元素 $x$ (在映射 $f$ 下) 的像,并记作 $f(x)$, 即
+$$
+y=f(x),
+$$
+而元素 $x$ 称为元素 $y$ (在胦射 $f$ 下) 的一个原像; 集合 $X$ 称为映射 $f$ 的定义域,记 作 $D_f$, 即 $D_f=X ; X$ 中所有元素的像所组成的集合称为映射 $f$ 的值域, 记作 $R_f$ 或 $f(X)$, 即
+$$
+R_f=f(X)=\{f(x) \mid x \in X\}. 
+$$
