--- a/高数/第一章-函数与极限/1.1.md
+++ b/高数/第一章-函数与极限/1.1.md
@@ -5,15 +5,33 @@
 ### 1.映射概念
 
 定义：  
-设 $X 、 Y$ 是两个非空集合, 如果存在一个法则 $f$, 使得对 $X$ 中每个元素 $x$, 按法则 $f$, 在 $Y$ 中有唯一确定的元素 $y$ 与之对应, 那么称 $f$ 为从 $X$ 到 $Y$ 的映射, 记作
+设$X、Y$是两个非空集合, 如果存在一个法则$f$，使得对$X$中每个元素$x$,按法则$f$，在$Y$中有唯一确定的元素$y$与之对应，那么称$f$为从 $X$到$Y$的映射,记作
 $$
 f: X \rightarrow Y,
 $$
-其中 $y$ 称为元素 $x$ (在映射 $f$ 下) 的像,并记作 $f(x)$, 即
+其中$y$称为元素$x$(在映射$f$下)的像,并记作$f(x)$，即
 $$
 y=f(x),
 $$
-而元素 $x$ 称为元素 $y$ (在胦射 $f$ 下) 的一个原像; 集合 $X$ 称为映射 $f$ 的定义域,记 作 $D_f$, 即 $D_f=X ; X$ 中所有元素的像所组成的集合称为映射 $f$ 的值域, 记作 $R_f$ 或 $f(X)$, 即
+而元素$x$称为元素$y$(在映射$f$下)的一个原像；集合$X$称为映射$f$的定义域,记作$D_f$,即$D_f=X;X$ 中所有元素的像所组成的集合称为映射$f$的值域, 记作$R_f$或$f(X)$,即
 $$
 R_f=f(X)=\{f(x) \mid x \in X\}. 
 $$
+
+### 2.逆映射与复合映射
+
+设 $f$ 是 $X$ 到 $Y$ 的单射, 则由定义, 对每个 $y \in R_f$, 有唯一的 $x \in X$, 适合 $f(x)=y$. 于是, 我们可定义一个从 $R_f$ 到 $X$ 的新映射 $g$, 即
+$$
+g: R_f \rightarrow X \text {, }
+$$
+对每个 $y \in R_f$, 规定 $g(y)=x$, 这 $x$ 满足 $f(x)=y$. 这个映射 $g$ 称为 $f$ 的逆映射, 记作 $f^{-1}$, 其定义域 $D_{f-1}=R_f$, 值域 $R_{f-1}=X$.
+
+设有两个映射  
+$$
+g: X \rightarrow Y_1, \quad f: Y_2 \rightarrow Z,
+$$
+其中 $Y_1 \subset Y_2$, 则由映射$g$ 和 $f$可以定出一个从 $X$ 到 $Z$ 的对应法则, 它将每个 $x \in X$ 映成 $f[g(x)] \in Z$. 显然, 这个对应法则确定了一个从 $X$ 到 $Z$ 的映射, 这个 映射称为映射 $g$ 和 $f$ 构成的复合映射, 记作 $f \circ g$, 即
+$$
+f \circ g: X \rightarrow Z,(f \circ g)(x)=f[g(x)], x \in X .
+$$
+由复合映射的定义可知, 映射 $g$ 和 $f$ 构成复合映射的条件是: $g$ 的值域 $R_g$ 必 须包含在 $f$ 的定义域内, 即 $R_g \subset D_f$. 否则, 不能构成复合映射. 由此可以知道, 映射$g$ 和$f$ 的复合是有顺序的, $f \circ g$ 有意义并不表示 $g \circ f$ 也有意义. 即使 $f \circ g$ 与 $g \circ f$ 都有意义, 复合映射 $f \circ g$ 与 $g \circ f$ 也末必相同.
