--- a/高数/第一章-函数与极限/1.1.md
+++ b/高数/第一章-函数与极限/1.1.md
@@ -35,3 +35,20 @@ $$
 f \circ g: X \rightarrow Z,(f \circ g)(x)=f[g(x)], x \in X .
 $$
 由复合映射的定义可知, 映射 $g$ 和 $f$ 构成复合映射的条件是: $g$ 的值域 $R_g$ 必 须包含在 $f$ 的定义域内, 即 $R_g \subset D_f$. 否则, 不能构成复合映射. 由此可以知道, 映射$g$ 和$f$ 的复合是有顺序的, $f \circ g$ 有意义并不表示 $g \circ f$ 也有意义. 即使 $f \circ g$ 与 $g \circ f$ 都有意义, 复合映射 $f \circ g$ 与 $g \circ f$ 也末必相同.
+
+## 二、函数
+
+### 1.函数的概念
+
+定义  
+设数集 $D \subset \mathbf{R}$, 则称映射 $f: D \rightarrow \mathbf{R}$ 为定义在 $D$ 上的函数, 通常简记为
+$$
+y=f(x), x \in D,
+$$
+其中 $x$ 称为**自变量**, $y$ 称为**因变量**, $D$ 称为**定义域**,记作 $D_f$, 即 $D_f=D$.
+
+函数的定义中, 对每个 $x \in D$, 按对应法则 $f$, 总有唯一确定的值 $y$ 与之对应, 这个值称为函数 $f$ 在 $x$ 处的**函数值**, 记作 $f(x)$, 即 $y=f(x)$. 因变量 $y$ 与自变量 $x$ 之间的这种依赖关系, 通常称为**函数关系**. 函数值 $f(x)$ 的全体所构成的集合称 为函数 $f$ 的**值域**, 记作 $R_f$ 或 $f(D)$, 即
+$$
+R_f=f(D)=\{y \mid y=f(x), x \in D\} .
+$$  
+需要指出, 按照上述定义, 记号 $f$ 和 $f(x)$ 的含义是有区别的: 前者表示自变量 $x$ 和因变量 $y$ 之间的对应法则,而后者表示与自变量 $x$ 对应的函数值. 但为了叙述方便,习惯上常用记号 “ $f(x), x \in D$ ”或 “ $y=f(x), x \in D$ ” 来表示定义在 $D$ 上的函数, 这时应理解为由它所确定的函数 $f$.
