--- a/高数/第一章-函数与极限/1.1.md
+++ b/高数/第一章-函数与极限/1.1.md
@@ -5,14 +5,10 @@
 ### 1.映射概念
 
 定义：  
-设$X、Y$是两个非空集合, 如果存在一个法则$f$，使得对$X$中每个元素$x$,按法则$f$，在$Y$中有唯一确定的元素$y$与之对应，那么称$f$为从 $X$到$Y$的映射,记作
-$$
-f: X \rightarrow Y,
-$$
-其中$y$称为元素$x$(在映射$f$下)的像,并记作$f(x)$，即
-$$
-y=f(x),
-$$
+设$X、Y$是两个非空集合, 如果存在一个法则$f$，使得对$X$中每个元素$x$,按法则$f$，在$Y$中有唯一确定的元素$y$与之对应，那么称$f$为从 $X$到$Y$的映射,记作$$f: X \rightarrow Y,$$  
+
+其中$y$称为元素$x$(在映射$f$下)的像,并记作$f(x)$，即$$y=f(x),$$
+
 而元素$x$称为元素$y$(在映射$f$下)的一个原像；集合$X$称为映射$f$的定义域,记作$D_f$,即$D_f=X;X$ 中所有元素的像所组成的集合称为映射$f$的值域, 记作$R_f$或$f(X)$,即
 $$
 R_f=f(X)=\{f(x) \mid x \in X\}. 
@@ -20,20 +16,18 @@ $$
 
 ### 2.逆映射与复合映射
 
-设 $f$ 是 $X$ 到 $Y$ 的单射, 则由定义, 对每个 $y \in R_f$, 有唯一的 $x \in X$, 适合 $f(x)=y$. 于是, 我们可定义一个从 $R_f$ 到 $X$ 的新映射 $g$, 即
-$$
-g: R_f \rightarrow X \text {, }
-$$
+设 $f$ 是 $X$ 到 $Y$ 的单射, 则由定义, 对每个 $y \in R_f$, 有唯一的 $x \in X$, 适合 $f(x)=y$. 于是, 我们可定义一个从 $R_f$ 到 $X$ 的新映射 $g$, 即$$g: R_f \rightarrow X \text {, }$$
+
 对每个 $y \in R_f$, 规定 $g(y)=x$, 这 $x$ 满足 $f(x)=y$. 这个映射 $g$ 称为 $f$ 的逆映射, 记作 $f^{-1}$, 其定义域 $D_{f-1}=R_f$, 值域 $R_{f-1}=X$.
 
 设有两个映射  
-$$
-g: X \rightarrow Y_1, \quad f: Y_2 \rightarrow Z,
-$$
+$$g: X \rightarrow Y_1, \quad f: Y_2 \rightarrow Z,$$  
+
 其中 $Y_1 \subset Y_2$, 则由映射$g$ 和 $f$可以定出一个从 $X$ 到 $Z$ 的对应法则, 它将每个 $x \in X$ 映成 $f[g(x)] \in Z$. 显然, 这个对应法则确定了一个从 $X$ 到 $Z$ 的映射, 这个 映射称为映射 $g$ 和 $f$ 构成的复合映射, 记作 $f \circ g$, 即
 $$
 f \circ g: X \rightarrow Z,(f \circ g)(x)=f[g(x)], x \in X .
 $$
+
 由复合映射的定义可知, 映射 $g$ 和 $f$ 构成复合映射的条件是: $g$ 的值域 $R_g$ 必 须包含在 $f$ 的定义域内, 即 $R_g \subset D_f$. 否则, 不能构成复合映射. 由此可以知道, 映射$g$ 和$f$ 的复合是有顺序的, $f \circ g$ 有意义并不表示 $g \circ f$ 也有意义. 即使 $f \circ g$ 与 $g \circ f$ 都有意义, 复合映射 $f \circ g$ 与 $g \circ f$ 也末必相同.
 
 ## 二、函数
@@ -45,10 +39,52 @@ $$
 $$
 y=f(x), x \in D,
 $$
+
 其中 $x$ 称为**自变量**, $y$ 称为**因变量**, $D$ 称为**定义域**,记作 $D_f$, 即 $D_f=D$.
 
 函数的定义中, 对每个 $x \in D$, 按对应法则 $f$, 总有唯一确定的值 $y$ 与之对应, 这个值称为函数 $f$ 在 $x$ 处的**函数值**, 记作 $f(x)$, 即 $y=f(x)$. 因变量 $y$ 与自变量 $x$ 之间的这种依赖关系, 通常称为**函数关系**. 函数值 $f(x)$ 的全体所构成的集合称 为函数 $f$ 的**值域**, 记作 $R_f$ 或 $f(D)$, 即
 $$
 R_f=f(D)=\{y \mid y=f(x), x \in D\} .
-$$  
-需要指出, 按照上述定义, 记号 $f$ 和 $f(x)$ 的含义是有区别的: 前者表示自变量 $x$ 和因变量 $y$ 之间的对应法则,而后者表示与自变量 $x$ 对应的函数值. 但为了叙述方便,习惯上常用记号 “ $f(x), x \in D$ ”或 “ $y=f(x), x \in D$ ” 来表示定义在 $D$ 上的函数, 这时应理解为由它所确定的函数 $f$.
+$$
+
+需要指出, 按照上述定义, 记号 $f$ 和 $f(x)$ 的含义是有区别的: 前者表示自变量 $x$ 和因变量 $y$ 之间的对应法则,而后者表示与自变量 $x$ 对应的函数值. 但为了叙述方便,习惯上常用记号 “ $f(x), x \in D$ ”或 “ $y=f(x), x \in D$ ” 来表示定义在 $D$ 上的函数, 这时应理解为由它所确定的函数 $f$.  
+==函数是从实数集到实数集的映射==
+
+### 2.函数的几种特性
+
+（1）函数的有界性  
+设函数 $f(x)$ 的定义域为 $D$，数集 $X \subset D$.如果存在数 $K_1$ 使得
+$$
+f(x) \le K_1
+$$
+
+对任一 $x \in X$都成立，那么称函数 $f(x)$ 在 $X$ 上有**上界**，而 $K_1$称为函数 $f(x)$ 在 $X$ 上的一个上界.如果存在数 $K_2$ 使得
+$$
+f(x) \ge K_2
+$$
+
+对任一 $x \in X$ 都成立，那么称函数 $f(x)$ 在 $X$ 上有**下界**，而 $K_2$称为函数 $f(x)$ 在 $X$ 上的一个下界.如果存在正数 $M$ ,使得
+$$
+|f(x)| \le M
+$$
+
+对任一 $x \in X$ 都成立，那么称函数 $f(x)$ 在 $X$ 上**有界**.如果这样的 $M$ 不存在，就称函数 $f(x)$ 在 $X$ 上**无界**.
+
+==函数 $f(x)$ 在 $X$ 上有界的充分必要条件是它在 $X$ 上既有上界又有下界==
+
+（2）函数的单调性
+
+（3）函数的奇偶性
+
+（4）函数的周期性 设函数 $f(x)$ 的定义域为 $D$ .如果存在一个正数 $l$ ，使得对于任一 $x \in D$ ，且
+$$
+f(x+l)=f(x)
+$$
+
+恒成立，那么称 $f(x)$ 为**周期函数**，$l$ 称为 $f(x)$ 的**周期**，通常我们说周期函数的周期是指最小正周期.  
+e.g. 狄利克雷（Dirichlet）函数
+$$
+D(x)= \begin{cases}1, & x \in \mathbf{Q}, \\ 0, & x \in \mathbf{Q}^c .\end{cases}
+$$
+
+容易验证这是一个周期函数，任何正有理数 $r$ 都是它的周期.因为不存在最小的正有理数，所以它没有最小正周期.
