--- a/高数/第一章-函数与极限/1.1.md
+++ b/高数/第一章-函数与极限/1.1.md
@@ -88,3 +88,18 @@ D(x)= \begin{cases}1, & x \in \mathbf{Q}, \\ 0, & x \in \mathbf{Q}^c .\end{cases
 $$
 
 容易验证这是一个周期函数，任何正有理数 $r$ 都是它的周期.因为不存在最小的正有理数，所以它没有最小正周期.
+
+### 3.反函数与复合函数
+
+作为逆映射的特例, 我们有以下反函数的概念.  
+设函数 $f: D \rightarrow f(D)$ 是单射, 则它存在逆映射 $f^{-1}: f(D) \rightarrow D$, 称此映射 $f^{-1}$ 为函数 $f$ 的反函数.
+按此定义, 对每个 $y \in f(D)$, 有唯一的 $x \in D$, 使得 $f(x)=y$, 于是有
+$$
+f^{-1}(y)=x .
+$$
+
+这就是说, 反函数 $f^{-1}$ 的对应法则是完全由函数 $f$ 的对应法则所确定的.
+例如, 函数 $y=x^3, x \in \mathbf{R}$ 是单射, 所以它的反函数存在, 其反函数为 $x=y^{\frac{1}{3}}, y \in \mathbf{R}$.
+由于习惯上自变量用 $x$ 表示, 因变量用 $y$ 表示, 于是 $y=x^3, x \in \mathbf{R}$ 的反函数通常写作 $y=x^{\frac{1}{3}}, x \in \mathbf{R}$.
+一般地, $y=f(x), x \in D$ 的反函数记成 $y=f^{-1}(x), x \in f(D)$.
+若 $f$ 是定义在 $D$ 上的单调函数, 则 $f: D \rightarrow f(D)$ 是单射, 于是 $f$ 的反函数 $f^{-1}$ 必 定存在, 而且容易证明 $f^{-1}$ 也是 $f(D)$ 上的单调函数. 事实上, 不妨设 $f$ 在 $D$ 上单调 增加，现在来证明 $f^{-1}$ 在 $f(D)$ 上也是单调增加的.
