--- a/高数/第一章-函数与极限/1.2.md
+++ b/高数/第一章-函数与极限/1.2.md
@@ -21,3 +21,9 @@ $$
 如果不存在这样的常数 $a$ ，就说数列 $\{x_n\}$ 没有极限，或者说数列 $\{x_n\}$ 是发散的，
 $$\text { 习惯上也说 } \lim _{n \rightarrow \infty} x_n \text { 不存在. }$$
 
+==数列极限的 $“\epsilon -N"$语言==：
+$$
+\lim _{n \rightarrow \infty} x_n=a \Leftrightarrow
+\forall \epsilon \gt 0,\exists N \in N_+,当 n \gt N 时，有 |x_n-a| \lt \epsilon.
+$$
+
