--- a/高数/第一章-函数与极限/1.2.md
+++ b/高数/第一章-函数与极限/1.2.md
@@ -21,9 +21,45 @@ $$
 如果不存在这样的常数 $a$ ，就说数列 $\{x_n\}$ 没有极限，或者说数列 $\{x_n\}$ 是发散的，
 $$\text { 习惯上也说 } \lim _{n \rightarrow \infty} x_n \text { 不存在. }$$
 
-==数列极限的 $“\epsilon -N"$语言==：
+==数列极限的 $“\epsilon -N"$语言:==
 $$
 \lim _{n \rightarrow \infty} x_n=a \Leftrightarrow
 \forall \epsilon \gt 0,\exists N \in N_+,当 n \gt N 时，有 |x_n-a| \lt \epsilon.
 $$
 
+注意：$N$ 是正整数，用取整函数和 $\epsilon$ 表示，如 $n \gt N=[\frac{1}{\epsilon}]$
+
+**例题**
+
+$$
+\lim _{n \rightarrow \infty} \frac{n+(-1)^{n+1}}{n}=1
+$$
+
+要使 $|x_n-a|= |\frac{n+(-1)^{n+1}}{n}-1|=\frac{1}{n}\lt \epsilon$  
+即要 $n \gt \frac{1}{\epsilon}$  
+$\therefore \forall \epsilon \gt 0，\exists N=[\frac{1}{\epsilon}],当 n \gt N 时，有|\frac{n+(-1)^{n+1}}{n}-1|\lt \epsilon$  
+$$\therefore \lim _{n \rightarrow \infty} \frac{n+(-1)^{n+1}}{n}=1$$
+
+**例题**
+
+$$
+\lim _{n \rightarrow \infty} \frac{(-1)^{n}}{(n+1)^2}=0
+$$
+
+要使 $|x_n-a|=| \frac{(-1)^{n}}{(n+1)^2}-0|=\frac{1}{(n+1)^2}\lt \epsilon$  
+即要$\frac{1}{(n+1)^2} \lt \frac{1}{n^2}\lt \epsilon$
+即要$n \gt \frac{1}{\sqrt{\epsilon}}$  
+$\therefore \forall \epsilon \gt 0，\exists N=[\frac{1}{\sqrt{\epsilon}}],当 n \gt N 时，有| \frac{(-1)^{n}}{(n+1)^2}-0|\lt \epsilon$  
+$\therefore 得证$
+
+**例题**
+
+$$
+\lim _{n \rightarrow \infty}(\sqrt{n+1}-\sqrt{n})\cdot \sin \frac{1}{n}=0
+$$
+
+要使 $|x_n-a|=|(\sqrt{n+1}-\sqrt{n})\cdot \sin \frac{1}{n}-0| \lt \epsilon$  
+$|(\sqrt{n+1}-\sqrt{n})\cdot \sin \frac{1}{n}|=\frac{|\sin \frac{1}{n}|}{\sqrt{n+1}+\sqrt{n}}\le \frac{1}{\sqrt{n+1}+\sqrt{n}} \le \frac{1}{2 \sqrt{n}} \le \frac{1}{\sqrt{n}} \lt \epsilon$  
+即要$n \gt \frac{1}{{\epsilon}^2}$
+$\therefore \forall \epsilon \gt 0，\exists N=[\frac{1}{{\epsilon}^2}]，当 n \gt N，有|(\sqrt{n+1}-\sqrt{n})\cdot \sin \frac{1}{n}-0| \lt \epsilon$  
+$\therefore 得证$
