--- a/高数/第一章-函数与极限/1.2.md
+++ b/高数/第一章-函数与极限/1.2.md
@@ -63,3 +63,45 @@ $|(\sqrt{n+1}-\sqrt{n})\cdot \sin \frac{1}{n}|=\frac{|\sin \frac{1}{n}|}{\sqrt{n
 即要$n \gt \frac{1}{{\epsilon}^2}$
 $\therefore \forall \epsilon \gt 0，\exists N=[\frac{1}{{\epsilon}^2}]，当 n \gt N，有|(\sqrt{n+1}-\sqrt{n})\cdot \sin \frac{1}{n}-0| \lt \epsilon$  
 $\therefore 得证$
+
+**例题**
+
+$$
+\lim _{n \rightarrow \infty} \sqrt[n]{a}=1
+$$
+
+当 $a=1$ 时, $\sqrt[n]{a}=1$ 显然成立
+当 $a>1$ 时,
+要使 $|\sqrt[n]{a}-1|<\varepsilon$
+即要 $\sqrt[n]{a}<\varepsilon+1$
+即要 $\frac{1}{n} \ln \mathrm{a}<\ln (\varepsilon+1)$
+即要 $\mathrm{n}>\frac{\ln \mathrm{a}}{\ln (\varepsilon+1)}$
+即要 $n>N=\left[\frac{\ln a}{\ln (\varepsilon+1)}\right]$
+当 $a<1$ 时, 同理
+
+
+**例题**
+
+$$
+\lim _{n \rightarrow \infty} \sqrt[n]{n}=1
+$$
+
+要使 $|\sqrt[n]{n}-1| \lt \epsilon$
+由均值不等式  
+$1 \le n^{\frac{1}{n}} =( 1 \cdot 1 \cdots \sqrt{n} \cdot \sqrt{n})^{\frac{1}{n}} \le \frac{n-2+2\sqrt{n}}{n}=1+\frac{2(\sqrt{n}-1)}{n}$  
+$\therefore 0 \leq n^{\frac{1}{n}}-1<\frac{2}{\sqrt{n}}$
+即要$\frac{2}{\sqrt{n}} \le \epsilon$
+即要$n \ge \frac{4}{\epsilon^2}$  
+$\therefore \forall \epsilon \gt 0，\exists N=[\frac{4}{{\epsilon}^2}]，当 n \gt N，有|\sqrt[n]{n}-1| \lt \epsilon$  
+$\therefore 得证$
+
+## 收敛数列的性质
+
+定理1（极限的唯一性）：如果数列 $\{x_n\}$ 收敛，那么它的极限唯一.
+
+定理2（收敛数列的有界性）：如果数列 $\{x_n\}$ 收敛，那么数列 $\{x_n\}$ 一定有界.
+
+定理3（收敛数列的保号性）：如果 $\lim _{n \rightarrow \infty} x_n=a$，且 $a>0(或 a<0),\exists N \in N_+,当 n > N 时,都有 x_n>0(x_n<0)$. 
+推论：如果数列 $\{x_n\}$ 从某项起有 $x_n \ge 0(x_n \le 0)$，且 $\lim _{n \rightarrow \infty} x_n=a$,那么 $a \ge 0$ 或 $a \le 0$.
+
+定理4（收敛数列与其子数列间的关系）：如果数列 $\{x_n\}$ 收敛与 $a$ ，那么它的任一子数列也收敛，且极限也是 $a$.
