--- a/高数/第一章-函数与极限/1.4.md
+++ b/高数/第一章-函数与极限/1.4.md
@@ -27,3 +27,5 @@ $$
 $$
 
 必须注意，无穷大 $(\infty)$ 不是数，不可与很大的数（如1千万、1亿等）混为一谈.
+
+定理2：在自变量的同一变化过程中，如果 $f(x)$ 为无穷大，那么 $\frac{1}{f(x)}$ 为无穷小；反之，如果 $f(x)$ 为无穷小，那么 $\frac{1}{f(x)}$ 为无穷大.
